--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,7 +5,7 @@ body
 
 .topBar
 {
-	
+	box-shadow:  10px 10px 5px #888888;
 }
 
 .workContainer
@@ -13,30 +13,172 @@ body
 	height: 400px;
 	width: 2000px;
 	background-color: black;
-	opacity: 0.4;
+	opacity: 0.6;
+	z-index: 100;
+	position: relative;
 
+
+}
+
+.marTop
+{
+	margin-top: 100px;
+	opacity: 1;
 }
 
 .item
 {
-
+	
 	border-radius: 50px;
 	height: 200px;
-	width: 400px;
-	background-color: red;
+	width: 200px;
+	top: 100px;
 	position: relative;
-	margin-top: 100px;
+	margin: 0 auto;
+	-webkit-perspective: 600px;
+    -moz-perspective: 600px;
+
+}
+
+.item .front
+{
+	position: absolute;
+    top: 0;
+    z-index: 900;
+    width: inherit;
+    height: inherit;
+    border-radius: 100px;
+    -webkit-transform: rotateX(0deg) rotateY(0deg);
+    -webkit-transform-style: preserve-3d;
+    -webkit-backface-visibility: hidden;
+    -moz-transform: rotateX(0deg) rotateY(0deg);
+    -moz-transform-style: preserve-3d;
+    -moz-backface-visibility: hidden;
+    /* -- transition is the magic sauce for animation -- */
+    -o-transition: all .4s ease-in-out;
+    -ms-transition: all .4s ease-in-out;
+    -moz-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+    background-color: red;
+
+}
+
+.item.flip .front
+{
+	z-index: 900;
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+}
+
+.item .back
+{
+	 position: absolute;
+            top: 0;
+            z-index: 800;
+            width: inherit;
+            height: inherit;
+            background-color: green;
+            border-radius: 100px;
+            -webkit-transform: rotateY(-180deg);
+            -webkit-transform-style: preserve-3d;
+            -webkit-backface-visibility: hidden;
+ 
+            -moz-transform: rotateY(-180deg);
+            -moz-transform-style: preserve-3d;
+            -moz-backface-visibility: hidden;
+            /* -- transition is the magic sauce for animation -- */
+            -o-transition: all .4s ease-in-out;
+            -ms-transition: all .4s ease-in-out;
+            -moz-transition: all .4s ease-in-out;
+            -webkit-transition: all .4s ease-in-out;
+            transition: all .4s ease-in-out;
 
 }
 
 
+.item.flip .back
+{
+ 	z-index: 1000;
+    -webkit-transform: rotateX(0deg) rotateY(0deg);
+}
 
 
+.rightButton
+{
+	position:absolute;
+	left:1200px;
+	margin-top: 350px;
+	top: auto;
+
+}
+
+.leftButton
+{
+	position: absolute;
+	left:100px;
+	margin-top: 350px;
+	top:auto;
+}
+
+#treasure
+{
+	height: 50px;
+	width: 50px;
+	position: relative;
+	text-align: center;
+	top: 80px;
+	left: 60px;
+	color: black;
+	text-decoration: none;
+}
+
+#dp
+{
+	border-radius: 100px;
+	height: 200px;
+	width: 200px;
+
+}
+
+#team
+{
+	position: relative;
+	height: 600px;
+	width: 90%;
+	left: 5%;
+	margin-top: 100px;
+	border: 5px solid black;
+	opacity: 0.6;
+	border-radius: 50px;
+}
+
+#member1
+{
+	height: 400px;
+	width: 400px;
+	border: 1px solid red;
+	background: url('../img/dakuAnimate.jpg');
+}
+
+#member1:hover
+{
+
+	animation:mymove 1s;
+	-webkit-animation-name:mymove;
+	-webkit-animation-duration: 0.21s; /* Safari and Chrome */
+	 /*Safari and Chrome*/
+}
 
 
-
-
-
+@-webkit-keyframes mymove /* Safari and Chrome */
+{
+0%   {background-position:400px 0px;;}
+25%  {background-position:800px 0px;}
+50%  {background-position:1200px 0px;}
+75%  {background-position:1600px 0px;}
+100% {background-position:2000px 0px;}
+}
 
 
 
