--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -182,12 +182,44 @@ body
 
 #footer
 {
-	height: 400px;
+	height: 700px;
 	margin-top: 100px;
-	border: 1px solid green;
+	border: 1px solid black;
 
 }
 
+#evelopeFront
+{
+	position: absolute;
+	border: 1px solid green;
+	width: 800px;
+	height: 642px;
+	background-image: url('../img/evelopeFront.png');
+	z-index: 900;
+}
+
+#evelopeBack
+{
+	width: 800px;
+	height: 642px;
+	position: absolute;
+	border: 1px solid yellow;
+	background-image: url('../img/evelopeBack.png');
+	z-index: 700;
+	
+}
+
+#letter
+{
+	width: 720px;
+	height: 400px;
+	position: absolute;
+	margin-left: 40px;
+	margin-top: 160px;
+	border: 1px solid white;
+	background-image: url('../img/letter.png');
+	z-index: 800;
+}
 
 
 
