--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -29,7 +29,7 @@ body
 .item
 {
 	
-	border-radius: 50px;
+	border-radius: 100px;
 	height: 200px;
 	width: 200px;
 	top: 100px;
@@ -39,6 +39,8 @@ body
     -moz-perspective: 600px;
 
 }
+
+
 
 .item .front
 {
@@ -183,6 +185,7 @@ body
 #footer
 {
 	height: 700px;
+
 	margin-top: 100px;
 	border: 1px solid black;
 
@@ -221,9 +224,30 @@ body
 	z-index: 800;
 }
 
+#map 
+{
+	background:url(../img/map.png);
+	position: relative;
+	height: 400px;
+	background-color: red;
 
+}
 
+#address
+{
+	margin-top: 50px;
+	margin-right: 50px;
+	background-color: white;
+	border-radius: 50px;
+	box-shadow: 5px 5px 5px;
+	opacity: 0.85;
+}
 
+#addContainer
+{
+
+	margin: 20px 10px 10px 40px;
+}
 
 
 
