--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -166,7 +166,7 @@ body
 #member1:hover
 {
 
-	animation:mymove 1s;
+	animation:mymove 0.6s;
 	-webkit-animation-name:mymove;
 	-webkit-animation-duration: 0.21s; /* Safari and Chrome */
 	 /*Safari and Chrome*/
@@ -184,11 +184,199 @@ body
 
 #footer
 {
+	width: 1340px;
 	height: 400px;
 	border: 1px solid black;
+	background: url(../img/envelope/map.png) no-repeat;
+	z-index: 900;
+	position: relative;
+	border-radius: 50px;
+}
+
+#evelopeContainer
+{
+	position: absolute;
+	/*border: 1px dotted black;*/
+	margin-top: 180px;
+	margin-left: 850px;
+	z-index: 1000;
+	height: 200px;
+	width: 350px;
 
 }
 
+#envelopeBackImg
+{
+	position: absolute;
+	width: 350px;
+	height: 200px;
+}
+
+.flap
+{
+	margin-top: 58px;
+	margin-left: 850px;
+	position: absolute;
+	width: 350px;
+	height:120px;
+	border: 1px dotted red;
+
+}
+
+.flap .flapOpen
+{
+	position: absolute;
+	width: inherit;
+	height: inherit;
+	z-index: 200;
+	-webkit-transform: rotateX(0deg) rotateY(0deg);
+    -webkit-transform-style: preserve-3d;
+    -webkit-backface-visibility: hidden;
+     -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+
+.flapOpenImg
+{
+	height: inherit;
+	width: inherit;
+}
+
+.flap.flipFlap .flapOpen 
+{
+	z-index: 900;
+    -webkit-transform: rotateX(180deg);
+    -moz-transform: rotateY(180deg);
+	
+}
+
+
+.flap .flapClose
+{
+	position: absolute;
+	border: 1px dotted green;
+	width: inherit;
+	height: inherit;
+	z-index: 100;
+	-webkit-transform: rotateY(-180deg);
+	-webkit-transform-style: preserve-3d;
+	-webkit-backface-visibility: hidden;
+	-webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+
+}
+
+.flapCloseImg
+{
+	width: inherit;
+	height: inherit;
+
+}
+
+
+.flap.flipFlap .flapClose 
+{
+	z-index: 1000;
+    -webkit-transform: rotateX(0deg) rotateY(0deg);
+}
+
+
+
+
+#facebook
+{
+	background: url(../img/png64/facebook64.png) no-repeat 0 0;
+	width: 64px;
+	height: 64px;
+	position: center;
+	display: inline-block;
+	position: relative;
+}
+
+#googleplus
+{
+	background: url(../img/png64/googleplus64.png) no-repeat 0 0;
+	width: 64px;
+	height: 64px;
+	position: center;
+	display: inline-block;
+	position: relative;
+}
+
+#linkedin
+{
+	background: url(../img/png64/linkedin64.png) no-repeat 0 0;
+	width: 64px;
+	height: 64px;
+	position: center;
+	display: inline-block;
+	position: relative;
+}
+
+.social
+{
+	z-index: 10000;
+	position: absolute;
+	border: 1px solid yellow;
+	
+
+
+
+}
+
+.social:hover
+{
+	zoom:150%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
 #evelope 
 {
 
@@ -239,7 +427,7 @@ body
 	margin: 20px 10px 10px 40px;
 }
 
-
+*/
 
 
 
